--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -7,6 +7,24 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/row_post_update_btn"
+        android:layout_width="61dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/row_post_delete_btn"
+        app:layout_constraintTop_toBottomOf="@+id/post_img"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <ImageView
+        android:id="@+id/row_post_delete_btn"
+        android:layout_width="61dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post_img"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <ImageView
         android:id="@+id/post_yummies_btn"
         android:layout_width="63dp"
         android:layout_height="109dp"
