--- a/app/src/main/res/layout/row_pos_item.xml
+++ b/app/src/main/res/layout/row_pos_item.xml
@@ -107,10 +107,10 @@
         android:id="@+id/row_post_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/row_post_img"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toEndOf="@+id/row_post_username"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.509" />
