--- a/app/src/main/res/menu/toolbar_my_posts.xml
+++ b/app/src/main/res/menu/toolbar_my_posts.xml
@@ -19,5 +19,9 @@
         android:icon="@drawable/ic_logout_sign"
         app:showAsAction="collapseActionView|never"
         />
-
+    <item
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/action_settings"
+        app:showAsAction="collapseActionView|never" />
 </menu>
