--- a/app/src/main/res/menu/toolbar_home.xml
+++ b/app/src/main/res/menu/toolbar_home.xml
@@ -16,7 +16,7 @@
 
     <item android:id="@+id/menu_logout"
         android:title="@string/menu_logout"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_logout_sign"
         app:showAsAction="collapseActionView|never"
         />
     <item android:id="@+id/menu_settings"
