--- a/app/src/main/res/layout/row_pos_item.xml
+++ b/app/src/main/res/layout/row_pos_item.xml
@@ -153,4 +153,14 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.2" />
 
+    <ProgressBar
+        android:id="@+id/post_profile_image_preloader"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="35dp"
+        android:layout_height="33dp"
+        app:layout_constraintBottom_toBottomOf="@+id/row_post_userimg"
+        app:layout_constraintEnd_toEndOf="@+id/row_post_userimg"
+        app:layout_constraintStart_toStartOf="@+id/row_post_userimg"
+        app:layout_constraintTop_toTopOf="@+id/row_post_userimg" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
