--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -142,4 +142,15 @@
         app:layout_constraintStart_toEndOf="@+id/post_favorite_btn"
         app:layout_constraintTop_toBottomOf="@+id/post_img" />
 
+    <ProgressBar
+        android:id="@+id/profileImageProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/post_userimg"
+        app:layout_constraintEnd_toEndOf="@+id/post_userimg"
+        app:layout_constraintTop_toTopOf="@+id/post_userimg"
+        app:layout_constraintVertical_bias="0.375" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
