--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,156 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/post_yummies_btn"
-        android:layout_width="53dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="168dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_img"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/not_liked_foreground" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/post_map_btn"
-        android:layout_width="47dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/post_yummies_btn"
-        app:layout_constraintTop_toBottomOf="@+id/post_img"
-        app:layout_constraintVertical_bias="0.021"
-        app:srcCompat="@drawable/ic_map" />
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/post_favorite_btn"
-        android:layout_width="42dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/post_map_btn"
-        app:layout_constraintTop_toBottomOf="@+id/post_img"
-        app:layout_constraintVertical_bias="0.022"
-        app:srcCompat="@drawable/ic_favorite_dark" />
+            <ImageView
+                android:id="@+id/post_yummies_btn"
+                android:layout_width="53dp"
+                android:layout_height="61dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginBottom="168dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_img"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@mipmap/not_liked_foreground" />
 
-    <ImageView
-        android:id="@+id/post_img"
-        android:layout_width="412dp"
-        android:layout_height="345dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_description"
-        tools:srcCompat="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/post_map_btn"
+                android:layout_width="47dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/post_yummies_btn"
+                app:layout_constraintTop_toBottomOf="@+id/post_img"
+                app:layout_constraintVertical_bias="0.021"
+                app:srcCompat="@drawable/ic_map" />
 
-    <ImageView
-        android:id="@+id/post_userimg"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="centerInside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+            <ImageView
+                android:id="@+id/post_favorite_btn"
+                android:layout_width="42dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/post_map_btn"
+                app:layout_constraintTop_toBottomOf="@+id/post_img"
+                app:layout_constraintVertical_bias="0.022"
+                app:srcCompat="@drawable/ic_favorite_dark" />
 
-    <TextView
-        android:id="@+id/post_yummies"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:fontFamily="casual"
-        android:text="0"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
+            <ImageView
+                android:id="@+id/post_img"
+                android:layout_width="412dp"
+                android:layout_height="345dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_description"
+                tools:srcCompat="@drawable/ic_launcher_background" />
 
-    <TextView
-        android:id="@+id/post_username"
-        android:layout_width="0dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:text="userName"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/post_userimg"
-        app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/post_userimg"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:scaleType="centerInside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/post_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="Description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_userimg" />
+            <ProgressBar
+                android:id="@+id/post_progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/post_img"
+                app:layout_constraintEnd_toEndOf="@+id/post_img"
+                app:layout_constraintStart_toStartOf="@+id/post_img"
+                app:layout_constraintTop_toTopOf="@+id/post_img" />
 
-    <TextView
-        android:id="@+id/post_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="Title"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/post_userimg"
-        app:layout_constraintTop_toBottomOf="@+id/post_username" />
+            <ProgressBar
+                android:id="@+id/profileImageProgressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/post_userimg"
+                app:layout_constraintEnd_toEndOf="@+id/post_userimg"
+                app:layout_constraintTop_toTopOf="@+id/post_userimg"
+                app:layout_constraintVertical_bias="0.375" />
 
-    <ProgressBar
-        android:id="@+id/post_progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/post_img"
-        app:layout_constraintEnd_toEndOf="@+id/post_img"
-        app:layout_constraintStart_toStartOf="@+id/post_img"
-        app:layout_constraintTop_toTopOf="@+id/post_img" />
+            <TextView
+                android:id="@+id/post_yummies"
+                android:layout_width="0dp"
+                android:layout_height="19dp"
+                android:fontFamily="casual"
+                android:text="0"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/textView2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="88dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="casual"
-        android:text="Yummis"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/post_favorite_btn"
-        app:layout_constraintTop_toBottomOf="@+id/post_img" />
+            <TextView
+                android:id="@+id/post_username"
+                android:layout_width="0dp"
+                android:layout_height="17dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:text="userName"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/post_userimg"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/profileImageProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/post_userimg"
-        app:layout_constraintEnd_toEndOf="@+id/post_userimg"
-        app:layout_constraintTop_toTopOf="@+id/post_userimg"
-        app:layout_constraintVertical_bias="0.375" />
+            <TextView
+                android:id="@+id/post_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:text="Description"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_userimg" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/post_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:text="Title"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/post_userimg"
+                app:layout_constraintTop_toBottomOf="@+id/post_username" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="88dp"
+                android:layout_height="23dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="casual"
+                android:text="Yummis"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toEndOf="@+id/post_favorite_btn"
+                app:layout_constraintTop_toBottomOf="@+id/post_img" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</LinearLayout>
